siril 0.9.7
--/--/--

* Fixed French translation
* Fixed bug in registration from compositing for layers alignment

siril 0.9.6
06/20/17

* Allow sequence export to use stacking image filtering
* Get the working directory as an optional command line argument
* Improve photometry
* Fixed wrong selected image in list panel when list was sorted
* Fixed registration with unselected images which made progress bar exceed 100%
* Fixed again compilation that failed on KFreeBSD
* Fixed name of Red Layer using compositing tool that was wrong

siril 0.9.5
11/28/16

* Implement a graph interface to display quality registration information
* No X and Y binning value could lead to errors with fwhm
* Take reference image as normalisation reference
* Retrieve Bayer pattern from RAW file
* Export sequence to MP4
* Statistics should not take into account black point
* Add ComboBox for registration interpolation
* Fixed interpolation in global star registration that gave blurred results
* Fixed FreeBSD intltool compilation fails
* Fixed erroneous created sequence in registration with unselected images
* Fixed compilation that failed on KFreeBSD

siril 0.9.4
08/17/16

 * Fixed issues with SER in generic processing function
 * Fixed inability to open FITS when filename had parenthesis
 * Fixed selecting new images did not update the number of selected images
 * Fixed histogram sliders lag on OS-X
 * Fixed message "Error in highest quality accepted for sequence processing....." during stack of %, even if quality data are computed
 * Fixed sequence export to SER with unselected images
 * Fixed global star alignment with angle close to 180deg
 * Fixed undo cosmetic correction
 * Fixed crash in peaker function
 * Fixed aborting global star registration summary
 * Fixed sequence list which was unreadable with dark GTK theme
 * Fixed the update of the list of images
 * Added support of internationalization: French, Dutch, Chinese, Italian, Arabic